/*
 * @Author: jianrui-rong rongjianrui@gmail.com
 * @Date: 2022-11-29 19:56:25
 * @LastEditors: jianrui-rong
 * @LastEditTime: 2022-12-08 11:03:47
 * @Description: 
 */

#include <memory>
#include <vector>
#include <math.h>

#include "de/constrain.hpp"
#include "de/individual.hpp"
#include "de/population.hpp"

namespace de {

class differential_evolution{
private:
    
};

} //namespace de
